<resources>
    <string name="app_name">Inventory App</string>

    <!--ListView & Detail Layout-->
    <string name="product_text">Product</string>
    <string name="quantity_text">Quantity:</string>
    <string name="price_text">Price: $</string>
    <string name="sale_text">Sold</string>
    <string name="order_text">Order</string>
    <string name="hint_text_product_name">Product Name</string>
    <string name="hint_text_price">$</string>
    <string name="hint_text_qty">Qty</string>

    <!-- Menu Buttons -->
    <string name="add_product_text">Add Product</string>
    <string name="edit_product_text">Edit Product</string>
    <string name="delete_text">Delete</string>
    <string name="delete_all_text">Delete All</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="confirm">Confirm</string>
    <string name="Increment">+</string>
    <string name="Decrement">-</string>
    <string name="pic_btn_txt">Add Photo</string>

    <!--Blank View-->
    <string name="blank_1">No Products.</string>
    <string name="blank_2">Add Some.</string>
    <string name="blank_3">...................</string>

    <!--Dialog-->
    <string name="dialog_quit_without_saving">Discard your changes and quit editing?</string>
    <string name="dialog_discard_text">DISCARD</string>
    <string name="dialog_continue_text">CONTINUE EDITING</string>

    <!--For editor-->
    <string name="editor_insert_failed">Error Saving</string>
    <string name="editor_insert_success">Save Successful</string>

    <string name="editor_update_product_failed">Update Failed.</string>
    <string name="editor_update_product_success">Update Successful.</string>


    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <string name="unknown_product">Unknown Product</string>



</resources>
