<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.inventoryapp2.EditorActivity">

    <!--Overview-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="Picture:" />

        <!--Edit Inputs-->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <ImageView
                android:id="@+id/imgView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_sentiment_neutral_black_24dp"/>

            <Button
                android:id="@+id/picBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pic_btn_txt"/>

        </LinearLayout>

    </LinearLayout>
    <!--Overview-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/CategoryStyle"
            android:text="Overview" />

        <!--Edit Inputs-->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_text_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_text_product_name"
                android:inputType="textCapWords" />

        </LinearLayout>

    </LinearLayout>

    <!--Price-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/price_text" />

        <!--Edit Inputs-->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_text_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_text_price"
                android:inputType="numberDecimal" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:text="@string/hint_text_qty" />

        <!--Edit Inputs-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decrementBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Decrement"
                tools:text="-" />

            <EditText
                android:id="@+id/edit_text_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Qty"
                android:inputType="number" />

            <Button
                android:id="@+id/incrementBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Increment"
                tools:text="+" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Email Button-->

        <Button
            android:id="@+id/orderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/order_text" />

    </RelativeLayout>

</LinearLayout>
