<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.inventoryapp2.CatalogActivity">

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!--EmptyView-->

    <RelativeLayout
        android:id="@+id/emptyView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/blank0"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_sentiment_neutral_black_24dp" />

        <TextView
            android:id="@+id/blank1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/blank0"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:text="@string/blank_1" />

        <TextView
            android:id="@+id/blank2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/blank1"
            android:layout_centerHorizontal="true"
            android:text="@string/blank_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/blank2"
            android:layout_centerHorizontal="true"
            android:text="@string/blank_3" />
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add_white_24dp" />

</RelativeLayout>
